dcarbn-carbon-platform-foundation/deploy/kubernetes/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dcarbn
  labels:
    app.kubernetes.io/part-of: dcarbn-carbon-platform
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
